welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: value % is not a member of String
      setCouleurBrosse(T((l+d)%w));
                              ^